--- a/package.json
+++ b/package.json
@@ -1,12 +1,47 @@
 {
-  "name": "tanstack-start-dog-tinder",
-  "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  }
+	"name": "tanstack-start-dog-tinder",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"dev": "vinxi dev",
+		"build": "vinxi build",
+		"start": "vinxi start",
+		"lint": "eslint .",
+		"format": "nr lint --fix",
+		"prepare": "husky"
+	},
+	"peerDependencies": {
+		"typescript": "^5.8.2"
+	},
+	"dependencies": {
+		"@tanstack/react-router": "^1.114.29",
+		"@tanstack/react-start": "^1.114.29",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"vinxi": "^0.5.3"
+	},
+	"devDependencies": {
+		"@antfu/ni": "^24.3.0",
+		"@eslint-react/eslint-plugin": "^1.38.3",
+		"@ryoppippi/eslint-config": "^0.2.3",
+		"@tanstack/eslint-plugin-query": "^5.68.0",
+		"@tanstack/eslint-plugin-router": "^1.114.29",
+		"@types/bun": "latest",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react": "^4.3.4",
+		"eslint": "^9.23.0",
+		"eslint-plugin-format": "^1.0.1",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.0",
+		"vite-tsconfig-paths": "^5.1.4"
+	},
+	"lint-staged": {
+		"*": [
+			"eslint --fix",
+			"git add"
+		]
+	}
 }
