--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "vinxi dev",
 		"build": "vinxi build",
 		"start": "vinxi start",
-		"lint": "eslint .",
+		"lint": "eslint --cache .",
 		"format": "nr lint --fix",
 		"prepare": "husky"
 	},
