--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "tanstack-start-dog-tinder",
+	"name": "@ryoppippi/tanstack-start-template",
 	"type": "module",
 	"private": true,
 	"scripts": {
