--- a/package.json
+++ b/package.json
@@ -27,18 +27,25 @@
 		"@antfu/ni": "^24.3.0",
 		"@eslint-react/eslint-plugin": "^1.38.4",
 		"@ryoppippi/eslint-config": "^0.3.7",
+		"@ryoppippi/unocss-preset": "^2.0.1",
+		"@std/collections": "npm:@jsr/std__collections@^1.0.10",
 		"@tanstack/eslint-plugin-query": "^5.68.0",
 		"@tanstack/eslint-plugin-router": "^1.114.29",
 		"@types/bun": "latest",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
+		"@unocss/preset-attributify": "66.1.0-beta.7",
+		"@unocss/reset": "66.1.0-beta.7",
 		"@vitest/ui": "^3.0.9",
+		"clsx": "^2.1.1",
 		"eslint": "^9.23.0",
 		"eslint-plugin-format": "^1.0.1",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.0",
+		"unocss": "66.1.0-beta.7",
+		"unocss-transformer-alias": "^0.0.8",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.0.9"
 	},
