--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.0",
+		"msw": "^2.7.3",
 		"unocss": "66.1.0-beta.7",
 		"unocss-transformer-alias": "^0.0.8",
 		"vite-tsconfig-paths": "^5.1.4",
