feat: enable react compiler

--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
 		"@unocss/eslint-plugin": "66.1.0-beta.8",
 		"@unocss/preset-attributify": "66.1.0-beta.8",
 		"@vitest/ui": "^3.0.9",
+		"babel-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
 		"eslint": "^9.23.0",
 		"eslint-plugin-format": "^1.0.1",
+		"eslint-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"husky": "^9.1.7",
