--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.76.1",
-		"@tanstack/react-router": "^1.120.3",
-		"@tanstack/react-start": "^1.120.3",
+		"@tanstack/react-router": "1.121.0-alpha.1",
+		"@tanstack/react-router-devtools": "^1.120.4-alpha.19",
+		"@tanstack/react-start": "1.121.0-alpha.1",
 		"@unocss/reset": "66.1.1",
 		"clsx": "^2.1.1",
 		"react": "^19.1.0",
@@ -54,6 +55,7 @@
 		"msw": "^2.8.2",
 		"unocss": "66.1.1",
 		"unocss-transformer-alias": "^0.0.8",
+		"vite": "^6.3.5",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.1.3"
 	},
