--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
 		"@unocss/eslint-plugin": "66.1.1",
 		"@unocss/preset-attributify": "66.1.1",
 		"@vitest/ui": "^3.1.3",
-		"babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+		"babel-plugin-react-compiler": "19.1.0-rc.2",
 		"eslint": "^9.26.0",
 		"eslint-plugin-format": "^1.0.1",
 		"eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-hooks": "6.0.0-rc.1",
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.0.0",
