--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
 	"packageManager": "pnpm@10.11.0",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "nr build:css && nr build:app",
-		"build:css": "unocss ./src/**/*.tsx --out-file ./src/uno.css",
-		"build:app": "vite build",
+		"build": "vite build",
 		"start": "vite start",
 		"lint": "eslint --cache .",
 		"format": "nr lint --fix",
@@ -39,7 +37,6 @@
 		"@types/bun": "latest",
 		"@types/react": "^19.1.4",
 		"@types/react-dom": "^19.1.5",
-		"@unocss/cli": "66.1.1",
 		"@unocss/eslint-plugin": "66.1.1",
 		"@unocss/preset-attributify": "66.1.1",
 		"@vitest/ui": "^3.1.3",
