--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"msw": "^2.9.0",
 		"unocss": "66.1.3",
 		"unocss-transformer-alias": "^0.0.8",
-		"vite": "^6.3.5",
+		"vite": "npm:rolldown-vite@latest",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.2.2"
 	},
