--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "nr lint --fix",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
-		"prepare": "husky"
+		"prepare": "simple-git-hooks"
 	},
 	"peerDependencies": {
 		"typescript": "^5.8.3"
@@ -46,19 +46,22 @@
 		"eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
 		"eslint-plugin-react-hooks": "6.0.0-rc1",
 		"eslint-plugin-react-refresh": "^0.4.20",
-		"husky": "^9.1.7",
 		"lint-staged": "^16.1.0",
 		"msw": "^2.9.0",
+		"simple-git-hooks": "^2.13.0",
 		"unocss": "66.1.3",
 		"unocss-transformer-alias": "^0.0.8",
 		"vite": "npm:rolldown-vite@latest",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.2.2"
 	},
+	"simple-git-hooks": {
+		"pre-commit": "lint-staged",
+		"pre-push": "pnpm test run"
+	},
 	"lint-staged": {
 		"*": [
-			"eslint --fix",
-			"git add"
+			"eslint --fix --cache"
 		]
 	},
 	"changelogithub": {
