--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.80.6",
-		"@tanstack/react-router": "1.121.0-alpha.22",
+		"@tanstack/react-router": "1.121.0",
 		"@tanstack/react-router-devtools": "^1.120.18",
-		"@tanstack/react-start": "1.121.0-alpha.25",
+		"@tanstack/react-start": "1.121.0",
 		"@unocss/reset": "66.1.3",
 		"clsx": "^2.1.1",
 		"react": "^19.1.0",
