--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"@eslint-react/eslint-plugin": "^1.51.1",
 		"@ryoppippi/eslint-config": "^0.3.7",
 		"@ryoppippi/unocss-preset": "^2.0.1",
-		"@std/collections": "npm:@jsr/std__collections@^1.1.1",
+		"@std/collections": "jsr:^1.1.1",
 		"@tanstack/eslint-plugin-query": "^5.78.0",
 		"@tanstack/eslint-plugin-router": "^1.115.0",
 		"@types/bun": "latest",
